force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__ApplicationReviewRecommendation__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationReviewRecommendation__c</fullName>
    <label>Application Review Recommendation</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationReviewRecommendation</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>