force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__ApplicationReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationReviewStatus__c</fullName>
    <label>Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationReviewStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>