force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__Condition__c.field-meta.xml
<CustomField>
    <fullName>ssot__Condition__c</fullName>
    <label>Condition</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Condition</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>