force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__DisplayOrderCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__DisplayOrderCount__c</fullName>
    <label>Display Order</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DisplayOrderCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>