force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__rel_1720291279169_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291279169_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationReview_AcademicTermId_map_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>ApplicationReview_AcademicTermId_map_rel</relationshipLabel>
    <relationshipName>rel_1720291279169_end</relationshipName>
    <type>Lookup</type>
</CustomField>