force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__rel_1724385578812_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724385578812_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationReview_AssignedUserId_map_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ApplicationReview_AssignedUserId_map_rel</relationshipLabel>
    <relationshipName>rel_1724385578812_end</relationshipName>
    <type>Lookup</type>
</CustomField>