force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__rel_1729227422363_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1729227422363_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationReview_ApplicationItemId__rel</label>
    <referenceTo>ssot__ApplicationItem__dlm</referenceTo>
    <relationshipLabel>ApplicationReview_ApplicationItemId__rel</relationshipLabel>
    <relationshipName>rel_1729227422363_end</relationshipName>
    <type>Lookup</type>
</CustomField>