force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__ReviewedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReviewedById__c</fullName>
    <label>Reviewed By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReviewedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>