force-app/main/default/objects/ssot__ApplicationReview__dlm/fields/ssot__SubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubmissionDate__c</fullName>
    <label>Submission Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubmissionDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>